# QuickVR

./: .gitmodules  CMakeLists.txt  README.md
examples/: CMakeLists.txt  examples.pro
examples/RoomTiny/: CMakeLists.txt  RoomTiny.pro  main.cpp  main.qml
src/: BaseLight.cpp  BaseLight.h  Buffer.cpp  Buffer.h  DebugCallback.cpp  DebugCallback.h  Device.cpp  Device.h  DirectionalLight.cpp  DirectionalLight.h  Headset.cpp  Headset.h  Node.cpp  Node.h  PointLight.cpp  PointLight.h  QuickVR_plugin.cpp  QuickVR_plugin.h  RoomScene.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  SkinnedMesh.cpp  SkinnedMesh.h  SpotLight.cpp  SpotLight.h  Texture.cpp  Texture.h  VRHeadset.cpp  VRHeadset.h  VRRenderer.cpp  VRRenderer.h  VRTypes.h  VRWindow.cpp  VRWindow.h  VertexAttribute.cpp  VertexAttribute.h  src.pro
src/imports/QuickVR/: qmldir
src/ovr/: VRRenderer.cpp  VRRenderer.h
